completed portfolio and contact styling in bootstrap, added index.php and composer.json

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,18 +31,38 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="page-header">
-					<h1>Portfolio</h1>
-				</div>
-				<div class="row">
-					<div class="col-md-9">
+					<section class="main-section">
+						<h1>Portfolio</h1>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dolor turpis, vehicula id est in, suscipit posuere orci. Integer ac interdum arcu, in faucibus eros. In vitae volutpat mi. Nam sit amet tincidunt justo, eget pretium neque. Suspendisse ultricies, urna sit amet sollicitudin suscipit, justo tortor mollis sem, sit amet condimentum ipsum diam in lectus. Donec id dapibus justo, a tincidunt nibh. Nunc congue eu sem id interdum. In hac habitasse platea dictumst.</p>
+						<div class="work">
+							<img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-						<p>Mauris rhoncus auctor aliquam. Aliquam fringilla arcu nec sem auctor efficitur. Phasellus at maximus urna. Integer eleifend nisl aliquam odio scelerisque ultricies. Sed congue eros sit amet nibh porta blandit. Duis vulputate in augue sed malesuada. Morbi aliquam, leo eu mattis aliquet, lacus nibh bibendum nibh, fermentum tristique est ante non tortor. Sed dapibus tortor ut arcu laoreet ultrices. Donec ullamcorper non ipsum id vehicula. Praesent tempus, sapien a rhoncus laoreet, neque mauris vulputate mauris, tempus ullamcorper metus leo ut erat. Nam sodales auctor eros, vitae mattis sapien cursus at. Proin nec diam vel lectus blandit ultrices. Nulla ut imperdiet eros. Praesent tempor molestie elementum. Proin dictum eros magna, eu cursus neque scelerisque vitae.</p>
-					</div>
+							<h3>Hangman</h3>
+						</div>
+						<div class="work">
+							<img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+							<h3>RPG Game</h3>
+						</div>
+						<div class="work">
+							<img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+							<h3>Trivia Game</h3>
+						</div>
+						<div class="work">
+							<img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+							<h3>Rutgers Info Widget</h3>
+						</div>
+						<div class="work">
+							<img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+							<h3>Rock Paper Scissors</h3>
+						</div>
+
+					</section>
 				</div>
 			</div>
-
 			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
